[PAGOPA-1837] Refactoring JUnit tests (#27)
* PAGOPA-1837 fixing first junits
* PAGOPA-1837 fixing PaaInviaRTServiceTest
* PAGOPA-1837 wip RptTest
* PAGOPA-1837 adding iuv generator error
* PAGOPA-1837 fix fail create debt position test
* PAGOPA-1837 fix RptTest
* PAGOPA-1837 fix all junit
* PAGOPA-1837 increasing coverage
* PAGOPA-1837 solving some issues
* PAGOPA-1837 case null iban
* PAGOPA-1837 case debt position null
* PAGOPA-1837 remove issue
* PAGOPA-1837 debt position bad request
* [PAGOPA-1837] fix: resolved wrong merge for error message class
* [PAGOPA-1837] fix: resolved wrong message error code

---------

Co-authored-by: Andrea De Rinaldis <andrea.derinaldis@pagopa.it>